force-app/main/default/objects/RE_External_Unit_Mapping__c/RE_External_Unit_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE_External_Unit_Mapping</label>
</CustomObject>