force-app/main/default/objects/RE_External_Unit_Mapping__c/fields/RE_External_Currency_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_External_Currency_Unit__c</fullName>
    <label>External Currency Unit</label>
    <length>7</length>
    <type>Text</type>
</CustomField>