force-app/main/default/objects/RE_External_Unit_Mapping__c/fields/RE_External_Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_External_Volume_Unit__c</fullName>
    <label>External Volume Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>