force-app/main/default/objects/RE_External_Unit_Mapping__c/listViews/All_Columns_View.listView-meta.xml
<ListView>
    <fullName>All_Columns_View</fullName>
    <columns>NAME</columns>
    <columns>RE_External_Currency_Unit__c</columns>
    <columns>RE_External_Volume_Unit__c</columns>
    <columns>RE_Rate_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns View</label>
    <language>en_US</language>
</ListView>